<resources>
    <string name="app_name">Android Notes App</string>

    <!--<Admob ads>-->
    <string name="admob_app_id">ca-app-pub-3724608650416312~8693037453</string>
    <string name="banner_ad_unit_id">ca-app-pub-3724608650416312/4630148299</string>
    <string name="interstitia_ad_unit_id">ca-app-pub-3724608650416312/6847255700</string>

    <!--< Fb Ads>-->
    <string name="fb_ad_banner_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="fb_ad_interstitia_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--<ONESIGNAL_APP_ID>-->
    <string name="ONESIGNAL_APP_ID">########-####-####-####-############</string>


    <string name="made_with_in_india">All Rights Reserved to Harsha.</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="settings">Settings</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about_us">About Us</string>
    <string name="version">Version</string>
    <string name="share_app">Share App</string>
    <string name="share">Share</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here..</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">Add</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="move_to_recycle_bin">Move to Recycle bin</string>
    <string name="are_you_sure_you_want_to_move_to_recycle_bin_this_note">Are you sure you want to Move to Recycle bin this note?</string>
    <string name="imageseve">ImageSeve</string>
    <string name="click_here">Click Here</string>
    <string name="todo">TODO</string>
    <string name="this_content_is_deleted">This content is deleted</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="home">Home</string>
    <string name="search_note">Search Note</string>

    <!-- Toast -->
    <string name="toast_bold">Bold</string>
    <string name="toast_italic">Italic</string>
    <string name="toast_underline">Underline</string>
    <string name="toast_strikethrough">Strikethrough</string>
    <string name="toast_bullet">Bullet</string>
    <string name="toast_quote">Quote</string>
    <string name="toast_format_clear">Format clear</string>

    <string name="server_error">Server Error</string>
    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="try_again">Try Again</string>
    <string name="error_nemosofts_key">Error Notes key</string>
    <string name="create_nemosofts_key">Create a new Notes key</string>
    <string name="err_internet_not_conn">err internet</string>
    <string name="exit">Exit</string>
    <string name="select_image">Select Image</string>

    <string name="clear_cache">Clear Cache</string>
    <string name="cache_cleared">Cache Cleared</string>
    <string name="clearing_cache">Clearing Cache..</string>


    <string name="app_name_pf">PFLockScreen</string>
    <string name="cancel_pf">Cancel</string>
    <string name="use_pin_pf">Use pin</string>
    <string name="sign_in_pf">Sign in</string>
    <string name="ok_pf">OK</string>
    <string name="next_pf">Next</string>
    <string name="forgot_pf">Forgot?</string>
    <string name="lock_screen_title_pf">Input pin code or use fingerprint</string>
    <string name="settings_pf">Settings</string>
    <string name="no_fingerprints_message_pf">No fingerprints found. Please add fingerprints in the settings if you want to use this authorization method."</string>
    <string name="no_fingerprints_title_pf">"No fingerprints found"</string>

    <string name="fingerprint_not_recognized_pf">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success_pf">Fingerprint recognized</string>
    <string name="fingerprint_description_pf">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint_pf">Touch sensor</string>
    <string name="description_fingerprint_icon_pf">Fingerprint icon</string>
    <string name="export">Export</string>
    <string name="export_image">Export Image</string>
    <string name="export_txt_file">Export Txt File</string>
    <string name="export_image_file">Export Image File</string>



    <string name="privacy_policy">Privacy Policy</string>

    <string name="app_theme">App Theme</string>
    <string name="dark_or_light_mode">Dark or Light Mode</string>
    <string name="cache">Cache</string>
    <string name="about_">About</string>
    <string name="about">About Us</string>
    <string name="social_links">Social links, policy</string>
    <string name="this_app_privacy_policy">This app privacy policy</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="love_this_app">Love this app? Let us Know in the Google Play Store how we can make it even better</string>
    <string name="share_the_app">Share the app with your friends and family</string>
    <string name="language">Language</string>
    <string name="high_security">High security</string>
</resources>