<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog"
    android:backgroundTint="?attr/BackgroundColor_S"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/ll_layoutExport"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:text="@string/export"
            android:textStyle="bold"
            android:textColor="?attr/BackgroundTint"
            android:textSize="@dimen/_16ssp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:background="?attr/Boder"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:background="?attr/selectableItemBackground"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:id="@+id/ll_export_image_file"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_image_file"
            android:contentDescription="@string/todo"
            app:tint="?attr/BackgroundTint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:text="@string/export_image_file"
            android:textColor="?attr/BackgroundTint"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="?attr/Boder"
        android:layout_height="0.5dp"/>
    <LinearLayout
        android:background="?attr/selectableItemBackground"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:id="@+id/ll_export_txt_file"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_txt_file"
            android:contentDescription="@string/todo"
            app:tint="?attr/BackgroundTint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:text="@string/export_txt_file"
            android:textColor="?attr/BackgroundTint"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="?attr/Boder"
        android:layout_height="0.5dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:background="?attr/selectableItemBackground"
            android:layout_alignParentEnd="true"
            android:id="@+id/textCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:includeFontPadding="false"
            android:padding="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textColor="@color/teal_200"
            android:textSize="@dimen/_13ssp" />
    </RelativeLayout>



</LinearLayout>