<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/BackgroundColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:background="?BackgroundColor"
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        app:titleTextColor="?BackgroundTint"
        app:navigationIcon="?attr/icon_a"
        app:title="@string/settings"
        android:minHeight="?attr/actionBarSize"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#332979FF"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_brightness_4_black_24dp"
                    app:tint="#2979FF"
                    tools:ignore="ObsoleteLayoutParam" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/app_theme"
                        android:textSize="17sp"
                        android:textColor="?attr/Titel_1"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/dark_or_light_mode"
                        android:textColor="?attr/Titel_2" />

                </LinearLayout>

                <com.notes.app.view.SwitchButton.SwitchButton
                    android:id="@+id/switch_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:sb_checked="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="15dp"
                android:id="@+id/ll_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent"
                android:background="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="10dp"
                        android:layout_gravity="center"
                        android:padding="12dp"
                        android:backgroundTint="#33F50057"
                        android:background="@drawable/abs_history_playlist"
                        android:src="@drawable/ic_clean_code"
                        app:tint="#F50057"
                        tools:ignore="ObsoleteLayoutParam"
                        android:contentDescription="@string/todo" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1">

                        <TextView
                            android:textStyle="bold"
                            android:textAlignment="viewStart"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/cache"
                            android:textSize="17sp"
                            android:textColor="?attr/Titel_1"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:textAlignment="viewStart"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:textSize="15sp"
                            android:text="@string/clear_cache"
                            android:textColor="?attr/Titel_2" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/tv_cachesize"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="?attr/Titel_1" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_clean_code"
                        android:layout_marginEnd="20dp"
                        android:padding="4dp"
                        android:layout_gravity="center_vertical"
                        app:tint="?attr/BackgroundTint" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:layout_marginBottom="15dp"
                android:id="@+id/lockScreen"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#33D500F9"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_lock"
                    app:tint="#D500F9"
                    tools:ignore="ObsoleteLayoutParam" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/lock_screen"
                        android:textSize="17sp"
                        android:textColor="?attr/Titel_1"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:text="@string/high_security"
                        android:textColor="?attr/Titel_2" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:layout_marginBottom="15dp"
                android:id="@+id/ll_privacy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#33FFAB00"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_poli"
                    app:tint="#FFAB00"
                    tools:ignore="ObsoleteLayoutParam" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/privacy_policy"
                        android:textSize="17sp"
                        android:textColor="?attr/Titel_1"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:text="@string/this_app_privacy_policy"
                        android:textColor="?attr/Titel_2" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:layout_marginBottom="15dp"
                android:id="@+id/nav_about"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#3300C853"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_support"
                    app:tint="#00C853"
                    tools:ignore="ObsoleteLayoutParam" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/about_"
                        android:textSize="17sp"
                        android:textColor="?attr/Titel_1"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:text="@string/social_links"
                        android:textColor="?attr/Titel_2" />

                </LinearLayout>


            </LinearLayout>



            <RelativeLayout
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/made_with_in_india"
                    android:textAlignment="center"
                    android:textColor="#607d8b"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>